objects/Green_feed__c.object
<CustomObject>
    <label>Green Feed</label>
    <nameField>
        <label>Green feed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Green Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Groupid__c</fullName>
        <label>Groupid</label>
        <length>32</length>
        <type>Text</type>
    </fields>
</CustomObject>